syntax/Express.ebnf
// Copyright 2026 Rochus Keller <mailto:me@rochus-keller.ch>
// EXPRESS Language Grammar (ISO 10303-11:2004)
// EbnfStudio compatible LL(1) version with a few LL(k) exceptions
// Adapted from Annex A of the standard
// - All *_ref and *_id collapsed to ident (semantic resolution not at parse time)
// - Merged assignment_stmt and procedure_call_stmt into assignOrCall_
// - Merged entity_constructor, enumeration_reference, function_call and general_ref 
//   into a unified ident-starting primary
// - Resolved ABSTRACT ambiguity in supertype_constraint
// - Added LL/LA prefixes where needed

///////////////////////////////////////////////////
// Top-level:

syntax ::= schema_decl { schema_decl }

schema_decl ::= SCHEMA ident [ string_literal ] ';' schema_body END_SCHEMA ';'

schema_body ::= { interface_specification } [ constant_decl ] { declaration | rule_decl }

interface_specification ::= reference_clause | use_clause

reference_clause ::= REFERENCE FROM ident [ '(' resource_or_rename { ',' resource_or_rename } ')' ] ';'

use_clause ::= USE FROM ident [ '(' named_type_or_rename { ',' named_type_or_rename } ')' ] ';'

resource_or_rename ::= ident [ AS ident ]

named_type_or_rename ::= ident [ AS ident ]

///////////////////////////////////////////////////
// Declarations:

declaration ::= entity_decl 
    | function_decl 
    | procedure_decl 
    | subtype_constraint_decl 
    | type_decl

constant_decl ::= CONSTANT constant_body { constant_body } END_CONSTANT ';'

constant_body ::= ident ':' instantiable_type ':=' expression ';'

///////////////////////////////////////////////////
// Entity:

entity_decl ::= entity_head entity_body END_ENTITY ';'

entity_head ::= ENTITY ident subsuper ';'

subsuper ::= [ supertype_constraint ] [ subtype_declaration ]

// supertype_constraint: ABSTRACT alone | ABSTRACT SUPERTYPE ... | SUPERTYPE ...
// ABSTRACT is ambiguous between abstract_entity_declaration and abstract_supertype_declaration
supertype_constraint ::= ABSTRACT [ SUPERTYPE [ subtype_constraint ] ] 
    | SUPERTYPE subtype_constraint

subtype_constraint ::= OF '(' supertype_expression ')'

subtype_declaration ::= SUBTYPE OF '(' ident { ',' ident } ')'

supertype_expression ::= supertype_factor { ANDOR supertype_factor }

supertype_factor ::= supertype_term { AND supertype_term }

supertype_term ::= ident 
    | one_of 
    | '(' supertype_expression ')'

one_of ::= ONEOF '(' supertype_expression { ',' supertype_expression } ')'

entity_body ::= { explicit_attr } [ derive_clause ] [ inverse_clause ] [ unique_clause ] [ where_clause ]

explicit_attr ::= attribute_decl { ',' attribute_decl } ':' [ OPTIONAL ] parameter_type ';'

attribute_decl ::= ident | redeclared_attribute

redeclared_attribute ::= qualified_attribute [ RENAMED ident ]

qualified_attribute ::= SELF group_qualifier attribute_qualifier

derive_clause ::= DERIVE derived_attr { derived_attr }

derived_attr ::= attribute_decl ':' parameter_type ':=' expression ';'

inverse_clause ::= INVERSE inverse_attr { inverse_attr }

inverse_attr ::= attribute_decl ':' [ ( SET | BAG ) [ bound_spec ] OF ] ident FOR ( SELF { qualifier } | [ \LL:2\ ident '.' ] ident ) ';'

unique_clause ::= UNIQUE unique_rule ';' { unique_rule ';' }

unique_rule ::= [ \LL:2\ ident ':' ] referenced_attribute { ',' referenced_attribute }

referenced_attribute ::= ident | qualified_attribute

///////////////////////////////////////////////////
// Type declaration:

type_decl ::= TYPE ident '=' underlying_type ';' [ where_clause ] END_TYPE ';'

underlying_type ::= concrete_types | constructed_types

concrete_types ::= aggregation_types | simple_types | ident

// EXTENSIBLE can start both enumeration_type and select_type
// Factor out EXTENSIBLE to resolve LL(1) conflict
constructed_types ::= EXTENSIBLE ( ENUMERATION [ OF enumeration_items | enumeration_extension ] 
                                 | [ GENERIC_ENTITY ] SELECT [ select_list | select_extension ] )
    | ENUMERATION [ OF enumeration_items | enumeration_extension ]
    | SELECT [ select_list | select_extension ]

enumeration_items ::= '(' ident { ',' ident } ')'

enumeration_extension ::= BASED_ON ident [ WITH enumeration_items ]

select_list ::= '(' ident { ',' ident } ')'

select_extension ::= BASED_ON ident [ WITH select_list ]

///////////////////////////////////////////////////
// Types:

parameter_type ::= generalized_types | named_types | simple_types

generalized_types ::= aggregate_type | general_aggregation_types | generic_entity_type | generic_type

named_types ::= ident // entity_ref | type_ref -- both simple_id

simple_types ::= binary_type | boolean_type | integer_type | logical_type | number_type | real_type | string_type

binary_type ::= BINARY [ width_spec ]

boolean_type ::= BOOLEAN

integer_type ::= INTEGER

logical_type ::= LOGICAL

number_type ::= NUMBER

real_type ::= REAL [ '(' numeric_expression ')' ]

string_type ::= STRING [ width_spec ]

width_spec ::= '(' numeric_expression ')' [ FIXED ]

aggregation_types ::= array_type | bag_type | list_type | set_type

array_type ::= ARRAY bound_spec OF [ OPTIONAL ] [ UNIQUE ] instantiable_type

bag_type ::= BAG [ bound_spec ] OF instantiable_type

list_type ::= LIST [ bound_spec ] OF [ UNIQUE ] instantiable_type

set_type ::= SET [ bound_spec ] OF instantiable_type

bound_spec ::= '[' bound_1 ':' bound_2 ']'

bound_1 ::= numeric_expression

bound_2 ::= numeric_expression

// instantiable_type: concrete_types | entity_ref
// But entity_ref is ident and concrete_types can end with ident (via type_ref), so just:
instantiable_type ::= concrete_types

general_aggregation_types ::= general_array_type | general_bag_type | general_list_type | general_set_type

general_array_type ::= ARRAY [ bound_spec ] OF [ OPTIONAL ] [ UNIQUE ] parameter_type

general_bag_type ::= BAG [ bound_spec ] OF parameter_type

general_list_type ::= LIST [ bound_spec ] OF [ UNIQUE ] parameter_type

general_set_type ::= SET [ bound_spec ] OF parameter_type

aggregate_type ::= AGGREGATE [ ':' type_label ] OF parameter_type

type_label ::= ident // type_label_id | type_label_ref -- both simple_id

generic_entity_type ::= GENERIC_ENTITY [ ':' type_label ]

generic_type ::= GENERIC [ ':' type_label ]

///////////////////////////////////////////////////
// Subtype constraint declaration:

subtype_constraint_decl ::= subtype_constraint_head subtype_constraint_body END_SUBTYPE_CONSTRAINT ';'

subtype_constraint_head ::= SUBTYPE_CONSTRAINT ident FOR ident ';'

subtype_constraint_body ::= [ abstract_supertype ] [ total_over ] [ supertype_expression ';' ]

abstract_supertype ::= ABSTRACT SUPERTYPE ';'

total_over ::= TOTAL_OVER '(' ident { ',' ident } ')' ';'

///////////////////////////////////////////////////
// Function and Procedure declarations:

function_decl ::= function_head algorithm_head stmt { stmt } END_FUNCTION ';'

function_head ::= FUNCTION ident [ '(' formal_parameter { ';' formal_parameter } ')' ] ':' parameter_type ';'

procedure_decl ::= procedure_head algorithm_head { stmt } END_PROCEDURE ';'

procedure_head ::= PROCEDURE ident [ '(' [ VAR ] formal_parameter { ';' [ VAR ] formal_parameter } ')' ] ';'

formal_parameter ::= ident { ',' ident } ':' parameter_type

algorithm_head ::= { declaration } [ constant_decl ] [ local_decl ]

local_decl ::= LOCAL local_variable { local_variable } END_LOCAL ';'

local_variable ::= ident { ',' ident } ':' parameter_type [ ':=' expression ] ';'

///////////////////////////////////////////////////
// Rule declaration:

rule_decl ::= rule_head algorithm_head { stmt } where_clause END_RULE ';'

rule_head ::= RULE ident FOR '(' ident { ',' ident } ')' ';'

///////////////////////////////////////////////////
// Statements:

// stmt alternatives that start with ident: assignment_stmt and procedure_call_stmt
// merged into assignOrCall_ to avoid LL(1) conflict
// null_stmt (';') is handled by making the content of stmt optional before ';'
stmt ::= alias_stmt 
    | assignOrCall_ ';'
    | case_stmt 
    | compound_stmt 
    | escape_stmt 
    | if_stmt 
    | null_stmt 
    | repeat_stmt 
    | return_stmt 
    | skip_stmt

null_stmt ::= ';'

// assignment: general_ref { qualifier } ':=' expression ';'
// procedure_call: (built_in_procedure | procedure_ref) [actual_parameter_list] ';'
// Both can start with ident. built_in_procedure is INSERT | REMOVE (keywords).
// Merged: first parse designator (ident { qualifier }), then ':=' expr or nothing (call).
// If starts with INSERT/REMOVE keyword, it's a procedure call with optional args.
assignOrCall_ ::= ident { qualifier } [ ':=' expression ] 
    | built_in_procedure [ actual_parameter_list ]

alias_stmt ::= ALIAS ident FOR ident { qualifier } ';' stmt { stmt } END_ALIAS ';'

case_stmt ::= CASE expression OF { case_action } [ OTHERWISE ':' stmt ] END_CASE ';'

case_action ::= case_label { ',' case_label } ':' stmt

case_label ::= expression

compound_stmt ::= BEGIN stmt { stmt } END ';'

escape_stmt ::= ESCAPE ';'

if_stmt ::= IF expression THEN stmt { stmt } [ ELSE stmt { stmt } ] END_IF ';'

repeat_stmt ::= REPEAT repeat_control ';' stmt { stmt } END_REPEAT ';'

repeat_control ::= [ increment_control ] [ while_control ] [ until_control ]

increment_control ::= ident ':=' bound_1 TO bound_2 [ BY numeric_expression ]

while_control ::= WHILE expression

until_control ::= UNTIL expression

return_stmt ::= RETURN [ '(' expression ')' ] ';'

skip_stmt ::= SKIP ';'

///////////////////////////////////////////////////
// Expressions:

expression ::= and_expression { OR and_expression }

and_expression ::= rel_expression { AND rel_expression }

rel_expression ::= simple_expression [ rel_op_extended simple_expression ]

simple_expression ::= term { add_like_op term }

term ::= factor { multiplication_like_op factor }

factor ::= simple_factor [ '**' simple_factor ]

// simple_factor alternatives starting with ident:
//   entity_constructor: entity_ref '(' [expression {',' expression}] ')'
//   enumeration_reference: [type_ref '.'] enumeration_ref 
//   function_call: (built_in_function | function_ref) [actual_parameter_list]
//   primary -> qualifiable_factor { qualifier } where qualifiable_factor includes
//     attribute_ref, constant_factor (constant_ref), general_ref, population (entity_ref)
// All these resolve to: ident followed by optional qualifiers/calls
// Unified: ident { qualifier } covers all cases
// Plus non-ident alternatives: aggregate_initializer, interval, query_expression, 
//   unary_op '(' expression ')' | unary_op primary, '(' expression ')', literals
simple_factor ::= aggregate_initializer 
    | interval 
    | query_expression 
    | unary_op ( '(' expression ')' | primary )
    | '(' expression ')' 
    | primary

// primary: literal | qualifiable_factor { qualifier }
// qualifiable_factor with all ident-based refs merged:
//   ident (covers attribute_ref, constant_ref, function_ref, general_ref, entity_ref/population)
//   built_in_constant (CONST_E | PI | SELF | '?')
//   built_in_function [actual_parameter_list] -- keywords like ABS, COS, etc.
//   function_call via ident is already covered by ident { qualifier }
primary ::= literal 
    | built_in_constant { qualifier }
    | built_in_function { qualifier }
    | ident { qualifier }

actual_parameter_list ::= '(' [ expression { ',' expression } ] ')'

qualifier ::= attribute_qualifier | group_qualifier | index_qualifier | actual_parameter_list

attribute_qualifier ::= '.' ident

group_qualifier ::= '\\' ident

index_qualifier ::= '[' index_1 [ ':' index_2 ] ']'

index_1 ::= numeric_expression

index_2 ::= numeric_expression

numeric_expression ::= simple_expression

aggregate_initializer ::= '[' [ element { ',' element } ] ']'

element ::= expression [ ':' repetition ]

repetition ::= numeric_expression

interval ::= '{' simple_expression interval_op simple_expression interval_op simple_expression '}'

interval_op ::= '<' | '<='

query_expression ::= QUERY '(' ident '<*' simple_expression '|' expression ')'

///////////////////////////////////////////////////
// Operators:

rel_op_extended ::= rel_op | IN | LIKE

rel_op ::= '<' | '>' | '<=' | '>=' | '<>' | '=' | ':<>:' | ':=:'

add_like_op ::= '+' | '-' | XOR

multiplication_like_op ::= '*' | '/' | DIV | MOD | '||'

unary_op ::= '+' | '-' | NOT

///////////////////////////////////////////////////
// Built-in constants and functions/procedures:

built_in_constant ::= CONST_E | PI | SELF | '?'

built_in_function ::= ABS | ACOS | ASIN | ATAN | BLENGTH | COS | EXISTS | EXP 
    | FORMAT | HIBOUND | HIINDEX | LENGTH | LOBOUND | LOINDEX 
    | LOG | LOG2 | LOG10 | NVL | ODD | ROLESOF | SIN | SIZEOF 
    | SQRT | TAN | TYPEOF | USEDIN | VALUE | VALUE_IN | VALUE_UNIQUE

built_in_procedure ::= INSERT | REMOVE

///////////////////////////////////////////////////
// Where clause:

where_clause ::= WHERE domain_rule ';' { domain_rule ';' }

domain_rule ::= [ \LA: 1:ident & 2:':'\ ident ':' ] expression

///////////////////////////////////////////////////
// Lexer-level tokens:

ident ::= // letter { letter | digit | '_' }

integer_literal ::= // digits

real_literal ::= // digits '.' [digits] ['e' [sign] digits]

simple_string_literal ::= // \q { (\q \q) | not_quote | \s } \q

encoded_string_literal ::= // '"' encoded_character { encoded_character } '"'

binary_literal ::= // '%' bit { bit }

string_literal ::= simple_string_literal | encoded_string_literal

literal ::= binary_literal | logical_literal | real_literal | integer_literal | string_literal

logical_literal ::= FALSE | TRUE | UNKNOWN

comment- ::= '(*' '*)' '--'

///////////////////////////////////////////////////
// Helper Tokens:
Comment ::=

/// Pragmas
%module ::= 'Express'
%namespace ::= 'Exp' 
%no_syntree ::= 'true'
