ExpParser2.cpp
/*
* Copyright (C) 2026 Rochus Keller (me@rochus-keller.ch)
*
* This file is part of the EXPRESS language project.
*
* The following is the license that applies to this copy of the
* file. For a license to use the file under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU Lesser General Public License Usage
* This file may be used under the terms of the GNU Lesser
* General Public License version 2.1 or version 3 as published by the Free
* Software Foundation and appearing in the file LICENSE.LGPLv21 and
* LICENSE.LGPLv3 included in the packaging of this file. Please review the
* following information to ensure the GNU Lesser General Public License
* requirements will be met: https://www.gnu.org/licenses/lgpl.html and
* http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html.
*/

// this parser was first generated with EbnfStudio and then manually extended to generate the AST

#include "ExpParser2.h"
using namespace Exp;
using namespace Ast;

static inline bool FIRST_schema_decl(int tt) {
    return tt == Tok_SCHEMA;
}

static inline bool FIRST_interface_specification(int tt) {
    return tt == Tok_REFERENCE || tt == Tok_USE;
}

static inline bool FIRST_declaration(int tt) {
    return tt == Tok_ENTITY || tt == Tok_FUNCTION || tt == Tok_PROCEDURE || tt == Tok_SUBTYPE_CONSTRAINT || tt == Tok_TYPE;
}

static inline bool FIRST_constant_decl(int tt) {
    return tt == Tok_CONSTANT;
}

static inline bool FIRST_constant_body(int tt) {
    return tt == Tok_ident;
}

static inline bool FIRST_entity_decl(int tt) {
    return tt == Tok_ENTITY;
}

static inline bool FIRST_supertype_constraint(int tt) {
    return tt == Tok_ABSTRACT || tt == Tok_SUPERTYPE;
}

static inline bool FIRST_subtype_constraint_fc(int tt) {
    return tt == Tok_OF;
}

static inline bool FIRST_subtype_declaration(int tt) {
    return tt == Tok_SUBTYPE;
}

static inline bool FIRST_supertype_expression(int tt) {
    return tt == Tok_Lpar || tt == Tok_ONEOF || tt == Tok_ident;
}

static inline bool FIRST_explicit_attr(int tt) {
    return tt == Tok_SELF || tt == Tok_ident;
}

static inline bool FIRST_redeclared_attribute(int tt) {
    return tt == Tok_SELF;
}

static inline bool FIRST_derive_clause(int tt) {
    return tt == Tok_DERIVE;
}

static inline bool FIRST_derived_attr(int tt) {
    return tt == Tok_SELF || tt == Tok_ident;
}

static inline bool FIRST_inverse_clause(int tt) {
    return tt == Tok_INVERSE;
}

static inline bool FIRST_inverse_attr(int tt) {
    return tt == Tok_SELF || tt == Tok_ident;
}

static inline bool FIRST_unique_clause(int tt) {
    return tt == Tok_UNIQUE;
}

static inline bool FIRST_unique_rule(int tt) {
    return tt == Tok_SELF || tt == Tok_ident;
}

static inline bool FIRST_type_decl(int tt) {
    return tt == Tok_TYPE;
}

static inline bool FIRST_concrete_types(int tt) {
    switch(tt){
    case Tok_ARRAY: case Tok_BAG: case Tok_BINARY: case Tok_BOOLEAN:
    case Tok_INTEGER: case Tok_LIST: case Tok_LOGICAL: case Tok_NUMBER:
    case Tok_REAL: case Tok_SET: case Tok_STRING: case Tok_ident:
        return true;
    default: return false;
    }
}

static inline bool FIRST_constructed_types(int tt) {
    return tt == Tok_ENUMERATION || tt == Tok_EXTENSIBLE || tt == Tok_SELECT;
}

static inline bool FIRST_enumeration_extension(int tt) {
    return tt == Tok_BASED_ON;
}

static inline bool FIRST_select_list(int tt) {
    return tt == Tok_Lpar;
}

static inline bool FIRST_select_extension(int tt) {
    return tt == Tok_BASED_ON;
}

static inline bool FIRST_generalized_types(int tt) {
    switch(tt){
    case Tok_AGGREGATE: case Tok_ARRAY: case Tok_BAG:
    case Tok_GENERIC: case Tok_GENERIC_ENTITY:
    case Tok_LIST: case Tok_SET:
        return true;
    default: return false;
    }
}

static inline bool FIRST_simple_types(int tt) {
    switch(tt){
    case Tok_BINARY: case Tok_BOOLEAN: case Tok_INTEGER: case Tok_LOGICAL:
    case Tok_NUMBER: case Tok_REAL: case Tok_STRING:
        return true;
    default: return false;
    }
}

static inline bool FIRST_aggregation_types(int tt) {
    return tt == Tok_ARRAY || tt == Tok_BAG || tt == Tok_LIST || tt == Tok_SET;
}

static inline bool FIRST_bound_spec(int tt) {
    return tt == Tok_Lbrack;
}

static inline bool FIRST_general_aggregation_types(int tt) {
    return tt == Tok_ARRAY || tt == Tok_BAG || tt == Tok_LIST || tt == Tok_SET;
}

static inline bool FIRST_width_spec(int tt) {
    return tt == Tok_Lpar;
}

static inline bool FIRST_subtype_constraint_decl(int tt) {
    return tt == Tok_SUBTYPE_CONSTRAINT;
}

static inline bool FIRST_abstract_supertype(int tt) {
    return tt == Tok_ABSTRACT;
}

static inline bool FIRST_total_over(int tt) {
    return tt == Tok_TOTAL_OVER;
}

static inline bool FIRST_function_decl(int tt) {
    return tt == Tok_FUNCTION;
}

static inline bool FIRST_procedure_decl(int tt) {
    return tt == Tok_PROCEDURE;
}

static inline bool FIRST_local_decl(int tt) {
    return tt == Tok_LOCAL;
}

static inline bool FIRST_local_variable(int tt) {
    return tt == Tok_ident;
}

static inline bool FIRST_rule_decl(int tt) {
    return tt == Tok_RULE;
}

static inline bool FIRST_stmt(int tt) {
    switch(tt){
    case Tok_ALIAS: case Tok_BEGIN: case Tok_CASE:
    case Tok_ESCAPE: case Tok_IF: case Tok_INSERT:
    case Tok_REMOVE: case Tok_REPEAT: case Tok_RETURN:
    case Tok_Semi: case Tok_SKIP: case Tok_ident:
        return true;
    default: return false;
    }
}

static inline bool FIRST_alias_stmt(int tt) {
    return tt == Tok_ALIAS;
}

static inline bool FIRST_assignOrCall_(int tt) {
    switch(tt){
    case Tok_INSERT: case Tok_REMOVE: case Tok_ident:
        return true;
    default: return false;
    }
}

static inline bool FIRST_built_in_procedure(int tt) {
    return tt == Tok_INSERT || tt == Tok_REMOVE;
}

static inline bool FIRST_case_stmt(int tt) {
    return tt == Tok_CASE;
}

static inline bool FIRST_compound_stmt(int tt) {
    return tt == Tok_BEGIN;
}

static inline bool FIRST_escape_stmt(int tt) {
    return tt == Tok_ESCAPE;
}

static inline bool FIRST_if_stmt(int tt) {
    return tt == Tok_IF;
}

static inline bool FIRST_null_stmt(int tt) {
    return tt == Tok_Semi;
}

static inline bool FIRST_repeat_stmt(int tt) {
    return tt == Tok_REPEAT;
}

static inline bool FIRST_return_stmt(int tt) {
    return tt == Tok_RETURN;
}

static inline bool FIRST_skip_stmt(int tt) {
    return tt == Tok_SKIP;
}

static inline bool FIRST_increment_control(int tt) {
    return tt == Tok_ident;
}

static inline bool FIRST_while_control(int tt) {
    return tt == Tok_WHILE;
}

static inline bool FIRST_until_control(int tt) {
    return tt == Tok_UNTIL;
}

static inline bool FIRST_expression(int tt) {
    switch(tt){
    case Tok_ABS: case Tok_ACOS: case Tok_ASIN: case Tok_ATAN:
    case Tok_BLENGTH: case Tok_CONST_E: case Tok_COS:
    case Tok_EXISTS: case Tok_EXP: case Tok_FALSE: case Tok_FORMAT:
    case Tok_HIBOUND: case Tok_HIINDEX:
    case Tok_LENGTH: case Tok_LOBOUND: case Tok_LOG: case Tok_LOG10: case Tok_LOG2: case Tok_LOINDEX:
    case Tok_Lbrace: case Tok_Lbrack: case Tok_Lpar:
    case Tok_Minus: case Tok_NOT: case Tok_NVL: case Tok_ODD:
    case Tok_PI: case Tok_Plus:
    case Tok_QUERY: case Tok_Qmark:
    case Tok_ROLESOF: case Tok_SELF: case Tok_SIN: case Tok_SIZEOF: case Tok_SQRT:
    case Tok_TAN: case Tok_TRUE: case Tok_TYPEOF: case Tok_UNKNOWN:
    case Tok_USEDIN: case Tok_VALUE: case Tok_VALUE_IN: case Tok_VALUE_UNIQUE:
    case Tok_binary_literal: case Tok_encoded_string_literal: case Tok_ident:
    case Tok_integer_literal: case Tok_real_literal: case Tok_simple_string_literal:
        return true;
    default: return false;
    }
}

static inline bool FIRST_aggregate_initializer(int tt) {
    return tt == Tok_Lbrack;
}

static inline bool FIRST_interval(int tt) {
    return tt == Tok_Lbrace;
}

static inline bool FIRST_query_expression(int tt) {
    return tt == Tok_QUERY;
}

static inline bool FIRST_unary_op(int tt) {
    return tt == Tok_Plus || tt == Tok_Minus || tt == Tok_NOT;
}

static inline bool FIRST_primary(int tt) {
    switch(tt){
    case Tok_ABS: case Tok_ACOS: case Tok_ASIN: case Tok_ATAN:
    case Tok_BLENGTH: case Tok_CONST_E: case Tok_COS:
    case Tok_EXISTS: case Tok_EXP: case Tok_FALSE: case Tok_FORMAT:
    case Tok_HIBOUND: case Tok_HIINDEX:
    case Tok_LENGTH: case Tok_LOBOUND: case Tok_LOG: case Tok_LOG10: case Tok_LOG2: case Tok_LOINDEX:
    case Tok_NVL: case Tok_ODD:
    case Tok_PI:
    case Tok_Qmark:
    case Tok_ROLESOF: case Tok_SELF: case Tok_SIN: case Tok_SIZEOF: case Tok_SQRT:
    case Tok_TAN: case Tok_TRUE: case Tok_TYPEOF: case Tok_UNKNOWN:
    case Tok_USEDIN: case Tok_VALUE: case Tok_VALUE_IN: case Tok_VALUE_UNIQUE:
    case Tok_binary_literal: case Tok_encoded_string_literal: case Tok_ident:
    case Tok_integer_literal: case Tok_real_literal: case Tok_simple_string_literal:
        return true;
    default: return false;
    }
}

static inline bool FIRST_literal(int tt) {
    switch(tt){
    case Tok_FALSE: case Tok_TRUE: case Tok_UNKNOWN:
    case Tok_binary_literal: case Tok_encoded_string_literal:
    case Tok_integer_literal: case Tok_real_literal: case Tok_simple_string_literal:
        return true;
    default: return false;
    }
}

static inline bool FIRST_built_in_constant(int tt) {
    return tt == Tok_CONST_E || tt == Tok_PI || tt == Tok_SELF || tt == Tok_Qmark;
}

static inline bool FIRST_built_in_function(int tt) {
    switch(tt){
    case Tok_ABS: case Tok_ACOS:
    case Tok_ASIN: case Tok_ATAN:
    case Tok_BLENGTH: case Tok_COS:
    case Tok_EXISTS: case Tok_EXP:
    case Tok_FORMAT:
    case Tok_HIBOUND: case Tok_HIINDEX:
    case Tok_LENGTH: case Tok_LOBOUND:
    case Tok_LOG: case Tok_LOG10:
    case Tok_LOG2: case Tok_LOINDEX:
    case Tok_NVL: case Tok_ODD:
    case Tok_ROLESOF: case Tok_SIN:
    case Tok_SIZEOF: case Tok_SQRT:
    case Tok_TAN: case Tok_TYPEOF:
    case Tok_USEDIN: case Tok_VALUE:
    case Tok_VALUE_IN: case Tok_VALUE_UNIQUE:
        return true;
    default: return false;
    }
}

static inline bool FIRST_qualifier(int tt) {
    return tt == Tok_Dot || tt == Tok_Bslash || tt == Tok_Lbrack || tt == Tok_Lpar;
}

static inline bool FIRST_rel_op_extended(int tt) {
    switch(tt){
    case Tok_Lt: case Tok_Gt:
    case Tok_Leq: case Tok_Geq:
    case Tok_LtGt: case Tok_Eq:
    case Tok_ColonLtGtColon: case Tok_ColonEqColon:
    case Tok_IN: case Tok_LIKE:
        return true;
    default: return false;
    }
}

static inline bool FIRST_add_like_op(int tt) {
    return tt == Tok_Plus || tt == Tok_Minus || tt == Tok_XOR;
}

static inline bool FIRST_multiplication_like_op(int tt) {
    return tt == Tok_Star || tt == Tok_Slash || tt == Tok_DIV || tt == Tok_MOD || tt == Tok_2Bar;
}

static inline bool FIRST_where_clause(int tt) {
    return tt == Tok_WHERE;
}

static inline bool FIRST_domain_rule(int tt) {
    return FIRST_expression(tt);
}

static inline bool FIRST_case_action(int tt) {
    return FIRST_expression(tt);
}

static inline bool FIRST_element(int tt) {
    return FIRST_expression(tt);
}

Parser2::Parser2(AstModel* m, Scanner2* s):scanner(s),mdl(m)
{
}

Parser2::~Parser2()
{
    foreach(Declaration* s, schemas)
        Declaration::deleteAll(s);
}

void Parser2::RunParser()
{
    errors.clear();
    next();
    syntax();
}

QList<Declaration*> Parser2::takeSchemas()
{
    QList<Declaration*> res = schemas;
    schemas.clear();
    return res;
}

void Parser2::next()
{
    cur = la;
    la = scanner->next();
    while( la.d_type == Tok_Invalid ) {
        errors << Error(la.d_val, la.toRowCol(), la.d_sourcePath);
        la = scanner->next();
    }
}

Token Parser2::peek(int off)
{
    if( off == 1 )
        return la;
    else if( off == 0 )
        return cur;
    else
        return scanner->peek(off-1);
}

void Parser2::invalid(const char* what)
{
    errors << Error(QString("invalid %1").arg(what), la.toRowCol(), la.d_sourcePath);
}

bool Parser2::expect(int tt, bool pkw, const char* where)
{
    if( la.d_type == tt ) { next(); return true; }
    else {
        errors << Error(QString("'%1' expected in %2").arg(tokenTypeString(tt)).arg(where),
                        la.toRowCol(), la.d_sourcePath);
        return false;
    }
}

Declaration* Parser2::addDecl(const Token& id, Declaration::Kind kind, bool checkDuplicate)
{
    if( checkDuplicate )
    {
        Declaration* d = mdl->findDecl(id.d_val,false);
        if( d != 0 )
        {
            error(id, QString("duplicate declaration '%1'").arg(id.d_val.constData()));
            return 0;
        }
    }
    Declaration* d = mdl->addDecl(id.d_val);
    d->kind = kind;
    d->pos = id.toRowCol();
    return d;
}

Declaration *Parser2::addMemberTo(Declaration *super, const Token &id, Ast::Declaration::Kind kind)
{
    Declaration* d = new Declaration();
    d->kind = kind;
    d->setName(id.d_val);
    d->pos = id.toRowCol();
    super->appendMember(d);
    return d;
}

void Parser2::error(const Token& t, const QString& msg)
{
    errors << Error(msg, t.toRowCol(), t.d_sourcePath);
}

void Parser2::error(const RowCol& rc, const QString& msg)
{
    errors << Error(msg, rc, scanner->source());
}

void Parser2::syntax()
{
    schema_decl();
    while( FIRST_schema_decl(la.d_type) ) {
        schema_decl();
    }
}

Declaration* Parser2::schema_decl()
{
    expect(Tok_SCHEMA, false, "schema_decl");
    expect(Tok_ident, false, "schema_decl");

    Declaration* schema = new Declaration();
    schema->kind = Declaration::Schema;
    schema->setName(cur.d_val);
    schema->pos = cur.toRowCol();

    SchemaData sd;
    sd.sourcePath = scanner->source();
    sd.schemaName = cur.d_val;

    schemas.append(schema);
    mdl->openScope(schema);

    // optional schema version string
    if( la.d_type == Tok_simple_string_literal || la.d_type == Tok_encoded_string_literal ) {
        next();
        sd.versionId = cur.d_val;
    }
    expect(Tok_Semi, false, "schema_decl");

    schema_body();

    expect(Tok_END_SCHEMA, false, "schema_decl");
    sd.end = la.toRowCol();
    schema->data = QVariant::fromValue(sd);
    expect(Tok_Semi, false, "schema_decl");

    mdl->closeScope();
    return schema;
}

void Parser2::schema_body()
{
    while( FIRST_interface_specification(la.d_type) ) {
        interface_specification();
    }
    if( FIRST_constant_decl(la.d_type) ) {
        constant_decl();
    }
    while( FIRST_declaration(la.d_type) || FIRST_rule_decl(la.d_type) ) {
        if( FIRST_declaration(la.d_type) ) {
            declaration();
        } else if( FIRST_rule_decl(la.d_type) ) {
            rule_decl();
        } else
            invalid("schema_body");
    }
}

void Parser2::interface_specification()
{
    if( la.d_type == Tok_REFERENCE ) {
        reference_clause();
    } else if( la.d_type == Tok_USE ) {
        use_clause();
    } else
        invalid("interface_specification");
}

void Parser2::reference_clause()
{
    expect(Tok_REFERENCE, false, "reference_clause");
    expect(Tok_FROM, false, "reference_clause");
    expect(Tok_ident, false, "reference_clause");
    Token schemaName = cur;

    Declaration* imp = addDecl(schemaName, Declaration::Reference, false);

    if( la.d_type == Tok_Lpar ) {
        expect(Tok_Lpar, false, "reference_clause");
        // resource_or_rename
        from_as(imp);
        while( la.d_type == Tok_Comma ) {
            expect(Tok_Comma, false, "reference_clause");
            from_as(imp);
        }
        expect(Tok_Rpar, false, "reference_clause");
    }
    expect(Tok_Semi, false, "reference_clause");
}

void Parser2::use_clause()
{
    expect(Tok_USE, false, "use_clause");
    expect(Tok_FROM, false, "use_clause");
    expect(Tok_ident, false, "use_clause");
    Token schemaName = cur;

    Declaration* imp = addDecl(schemaName, Declaration::Use, false);

    if( la.d_type == Tok_Lpar ) {
        expect(Tok_Lpar, false, "use_clause");
        // named_type_or_rename
        from_as(imp);

        while( la.d_type == Tok_Comma ) {
            expect(Tok_Comma, false, "use_clause");
            from_as(imp);
        }
        expect(Tok_Rpar, false, "use_clause");
    }
    expect(Tok_Semi, false, "use_clause");
}

void Parser2::from_as(Ast::Declaration * imp)
{
    expect(Tok_ident, false, "from_as");
    Token id = cur, as = cur;
    if( la.d_type == Tok_AS ) {
        expect(Tok_AS, false, "from_as");
        expect(Tok_ident, false, "from_as");
        as = cur;
    }
    Declaration* what = new Declaration();
    what->kind = Declaration::Imported;
    what->setName(as.d_val);
    what->pos = as.toRowCol();
    what->data = id.d_val;
    imp->appendMember(what);
}

void Parser2::declaration()
{
    if( FIRST_entity_decl(la.d_type) ) {
        entity_decl();
    } else if( FIRST_function_decl(la.d_type) ) {
        function_decl();
    } else if( FIRST_procedure_decl(la.d_type) ) {
        procedure_decl();
    } else if( FIRST_subtype_constraint_decl(la.d_type) ) {
        subtype_constraint_decl();
    } else if( FIRST_type_decl(la.d_type) ) {
        type_decl();
    } else
        invalid("declaration");
}

void Parser2::constant_decl()
{
    expect(Tok_CONSTANT, false, "constant_decl");
    constant_body();
    while( FIRST_constant_body(la.d_type) ) {
        constant_body();
    }
    expect(Tok_END_CONSTANT, false, "constant_decl");
    expect(Tok_Semi, false, "constant_decl");
}

void Parser2::constant_body()
{
    expect(Tok_ident, false, "constant_body");
    Token name = cur;
    expect(Tok_Colon, false, "constant_body");
